[gd_scene load_steps=23 format=2]

[ext_resource path="res://Enemy_3.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/Enemy1 (46).png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/Enemy1 (47).png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/Enemy1 (41).png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemies/Enemy1 (37).png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemies/Enemy1 (49).png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/Enemy1 (36).png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemies/Enemy1 (42).png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemies/Enemy1 (38).png" type="Texture" id=9]
[ext_resource path="res://Sprites/Enemies/Enemy1 (44).png" type="Texture" id=10]
[ext_resource path="res://Sprites/Enemies/Enemy1 (39).png" type="Texture" id=11]
[ext_resource path="res://Sprites/Enemies/Enemy1 (43).png" type="Texture" id=12]
[ext_resource path="res://Sprites/Enemies/Enemy1 (35).png" type="Texture" id=13]
[ext_resource path="res://Sprites/Enemies/Enemy1 (48).png" type="Texture" id=14]
[ext_resource path="res://Sprites/Enemies/Enemy1 (40).png" type="Texture" id=15]
[ext_resource path="res://Sprites/Enemies/Enemy1 (45).png" type="Texture" id=16]

[sub_resource type="CapsuleShape2D" id=1]
radius = 59.1697
height = 42.5201

[sub_resource type="CapsuleShape2D" id=2]
radius = 61.1719
height = 58.5382

[sub_resource type="Animation" id=3]
resource_name = "Fire Bomb"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -3, -2.5 ), Vector2( -7.5, -2.5 ), Vector2( -12, -1.5 ), Vector2( -4, 4.5 ), Vector2( 0, 5 ), Vector2( 0, 4.5 ), Vector2( 0, 3.5 ), Vector2( 0, 2 ), Vector2( 0, -0.5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Fire Rocket"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 16 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -2.5 ), Vector2( -4, 4.5 ), Vector2( 0, 5 ), Vector2( 0, 4.5 ), Vector2( 0, 3.5 ), Vector2( 0, 2 ), Vector2( 0, -0.5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 13 ), ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -0.5 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Trigger"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 13 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -0.5 ), Vector2( 0, 2 ), Vector2( 0, 3.5 ), Vector2( 0, 4.5 ), Vector2( 0, 5 ), Vector2( -4, 4.5 ), Vector2( 0, -2.5 ) ]
}

[node name="Enemy_3" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea"]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.81157, 2.81157 )
texture = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Fire Bomb" = SubResource( 3 )
"anims/Fire Rocket" = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Trigger = SubResource( 6 )

[node name="RocketPoint" type="Node2D" parent="."]
position = Vector2( -90, -9 )

[node name="RocketPoint2" type="Node2D" parent="."]
position = Vector2( -10.7937, -9 )

[node name="PlasmaBombPoint" type="Node2D" parent="."]
position = Vector2( -140, 64 )

[node name="PlasmaBombPoint2" type="Node2D" parent="."]
position = Vector2( -90, 64 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="EnemyArea" to="." method="_on_EnemyArea_area_entered"]
[connection signal="body_entered" from="EnemyArea" to="." method="_on_EnemyArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
